// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Swap/useGetSwapInfo exactAmountIn returns swap in correct format if a trade is found 1`] = `
Object {
  "error": undefined,
  "swap": Object {
    "direction": "exactAmountIn",
    "exchangeRate": "0.499374217772215269",
    "expectedToTokenAmountReceivedWei": "499374217772215269",
    "fromToken": Object {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "asset": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xdAC17F958D2ee523a2206206994597C13D831ec7/logo.png",
      "decimals": 6,
      "id": "usdt",
      "symbol": "USDT",
    },
    "fromTokenAmountSoldWei": "1000000000000000000",
    "minimumToTokenAmountReceivedWei": "496889768927577382",
    "routePath": Array [
      "0xaB1a4d4f1D656d2450692D237fdD6C7f9146e814",
      "0xFa60D973F7642B748046464e165A65B7323b0DEE",
    ],
    "toToken": Object {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "asset": "ipfs://QmXttGpZrECX5qCyXbBQiqgQNytVGeZW5Anewvh2jc4psg",
      "decimals": 18,
      "id": "uni",
      "symbol": "UNI",
    },
  },
}
`;

exports[`pages/Swap/useGetSwapInfo exactAmountOut returns swap in correct format if a trade is found 1`] = `
Object {
  "error": undefined,
  "swap": Object {
    "direction": "exactAmountOut",
    "exchangeRate": "0.49875",
    "expectedFromTokenAmountSoldWei": "1002506265664160402",
    "fromToken": Object {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "asset": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xdAC17F958D2ee523a2206206994597C13D831ec7/logo.png",
      "decimals": 6,
      "id": "usdt",
      "symbol": "USDT",
    },
    "maximumFromTokenAmountSoldWei": "1007518796992481204",
    "routePath": Array [
      "0xaB1a4d4f1D656d2450692D237fdD6C7f9146e814",
      "0xFa60D973F7642B748046464e165A65B7323b0DEE",
    ],
    "toToken": Object {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "asset": "ipfs://QmXttGpZrECX5qCyXbBQiqgQNytVGeZW5Anewvh2jc4psg",
      "decimals": 18,
      "id": "uni",
      "symbol": "UNI",
    },
    "toTokenAmountReceivedWei": "500000000000000000",
  },
}
`;
